# hiviewdfx_hidumper

./: 1.txt  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  diff.txt  hidumper.gni  hidumper.yaml  ohos.build
frameworks/native/: BUILD.gn  common.h  data_id.h  data_inventory.h  dump_controller.h  dump_utils.cpp  dump_utils.h  writer_utils.cpp  writer_utils.h
frameworks/native/data_inventory/: data_inventory.cpp  data_inventory.h
frameworks/native/dump_strategy/: cpu_dump_strategy.h  dump_strategy.h  dump_strategy_factory.cpp  dump_strategy_factory.h  ipc_stat_dump_strategy.h  log_dump_strategy.h  mem_dump_strategy.h  net_dump_strategy.h  process_info_dump_strategy.h  stack_dump_strategy.h  storage_dump_strategy.h  system_ability_dump_strategy.h  system_info_dump_strategy.h
frameworks/native/include/common/: dump_cfg.h  dump_common_tag.h  dumper_constant.h  dumper_opts.h  dumper_parameter.h  option_args.h
frameworks/native/include/executor/: api_dumper.h  cjheap_memory_dumper.h  cmd_dumper.h  column_rows_filter.h  cpu_dumper.h  dumper_group.h  env_param_dumper.h  event_detail_dumper.h  event_list_dumper.h  fd_output.h  fd_thread_dumper.h  file_format_dump_filter.h  file_stream_dumper.h  heap_memory_dumper.h  hidumper_executor.h  ipc_stat_dumper.h  jsheap_memory_dumper.h  list_dumper.h  memory_dumper.h  memory_smap_show_dumper.h  properties_dumper.h  sa_dumper.h  traffic_dumper.h  version_dumper.h  zip_output.h  zipfolder_output.h
frameworks/native/include/factory/: api_dumper_factory.h  cjheap_memory_dumper_factory.h  cmd_dumper_factory.h  column_rows_filter_factory.h  cpu_dumper_factory.h  dumper_group_factory.h  env_param_dumper_factory.h  event_detail_dumper_factory.h  event_list_dumper_factory.h  executor_factory.h  fd_output_factory.h  fd_thread_dumper_factory.h  file_dumper_factory.h  file_format_dump_filter_factory.h  heap_memory_dumper_factory.h  ipc_stat_dumper_factory.h  jsheap_memory_dumper_factory.h  list_dumper_factory.h  memory_dumper_factory.h  memory_smaps_show_dumper_factory.h  properties_dumper_factory.h  sa_dumper_factory.h  traffic_dumper_factory.h  version_dumper_factory.h  zip_output_factory.h
frameworks/native/include/manager/: dump_implement.h
frameworks/native/include/util/: config_data.h  config_utils.h  dump_compressor.h  dump_cpu_info_util.h  file_utils.h  string_utils.h  zip_file_cleaner.h  zip_utils.h
frameworks/native/manager/: cmd_parse.cpp  cmd_parse.h  dump_context.h  dump_manager.cpp  dump_manager.h
frameworks/native/src/common/: dump_cfg.cpp  dumper_opts.cpp  dumper_parameter.cpp  option_args.cpp
frameworks/native/src/executor/: api_dumper.cpp  cjheap_memory_dumper.cpp  cmd_dumper.cpp  column_rows_filter.cpp  cpu_dumper.cpp  dumper_group.cpp  env_param_dumper.cpp  event_detail_dumper.cpp  event_list_dumper.cpp  (+17 more)
frameworks/native/utils/: writer_utils.cpp  writer_utils.h
interfaces/innerkits/: BUILD.gn  dump_usage.cpp  libdumpusage.map
interfaces/innerkits/include/: dump_usage.h
plugins/: BUILD.gn  dumper_plugin.h  dumper_plugin_host.cpp
services/: BUILD.gn  IHidumperCpuService.idl  hidumper.map  main.cpp
services/native/etc/: event_reason_config.json  hidumper_service.cfg  hidumper_service.rc  task_enable_config.json
services/native/include/: dump_app_state_observer.h  dump_battery_stats_subscriber.h  dump_event_handler.h  dump_log_manager.h  dump_manager_cpu_service.h  dump_manager_service.h  dump_on_demand_load.h  raw_param.h
services/native/src/: dump_app_state_observer.cpp  dump_battery_stats_subscriber.cpp  dump_common_utils.cpp  dump_cpu_data.cpp  dump_event_handler.cpp  dump_log_manager.cpp  dump_manager_client.cpp  dump_manager_cpu_client.cpp  dump_manager_cpu_service.cpp  dump_manager_service.cpp  dump_on_demand_load.cpp  raw_param.cpp
services/zidl/include/: dump_broker_cpu_stub.h  dump_broker_stub.h  dump_callback_broker_proxy.h
services/zidl/src/: dump_broker_cpu_proxy.cpp  dump_broker_cpu_stub.cpp  dump_broker_proxy.cpp  dump_broker_stub.cpp  dump_callback_broker_proxy.cpp  dump_callback_broker_stub.cpp
test/: BUILD.gn
test/fuzztest/client_fuzzer/: BUILD.gn  client_fuzzer.cpp
test/fuzztest/cpudump_fuzzer/: BUILD.gn  cpudump_fuzzer.cpp
test/fuzztest/dumpusage_fuzzer/: BUILD.gn  dumpusage_fuzzer.cpp
test/fuzztest/helpdump_fuzzer/: BUILD.gn  helpdump_fuzzer.cpp
test/fuzztest/ipcdump_fuzzer/: BUILD.gn  ipcdump_fuzzer.cpp
test/fuzztest/memdump_fuzzer/: BUILD.gn  memdump_fuzzer.cpp
test/fuzztest/memjsheapdump_fuzzer/: BUILD.gn  memjsheapdump_fuzzer.cpp
test/fuzztest/memsmapsdump_fuzzer/: BUILD.gn  memsmapsdump_fuzzer.cpp
test/fuzztest/netdump_fuzzer/: BUILD.gn  netdump_fuzzer.cpp  project.xml
test/fuzztest/processdump_fuzzer/: BUILD.gn  processdump_fuzzer.cpp
test/fuzztest/sadump_fuzzer/: BUILD.gn  project.xml  sadump_fuzzer.cpp  sadump_fuzzer.h
test/fuzztest/storagedump_fuzzer/: BUILD.gn  storagedump_fuzzer.cpp
test/innerkits_test/: BUILD.gn  main.cpp
test/scripts/: main.py  prepare.py  pytest.ini  readme.md  requirements.txt
test/scripts/testModule/: conftest.py  test_base_command.py  test_cpu.py  test_ipc.py  test_mem_jsheap.py  test_mem_smaps.py  test_memory.py  test_net.py  test_performance.py  test_permission.py  test_process.py  test_sa.py  test_screenshot.py  test_storage.py  utils.py
test/unittest/common/: BUILD.gn  data_inventory_test.cpp  dump_common_utils_test.cpp  dump_info_task_test.cpp  event_dumper_test.cpp  get_heap_info_test.cpp  hidumper_client_test.cpp  hidumper_configutils_test.cpp  hidumper_configutils_test.h  hidumper_cpu_service_test.cpp  hidumper_cpu_zidl_test.cpp  hidumper_dumpers_test.cpp  hidumper_innerkits_test.cpp  hidumper_manager_test.cpp  hidumper_memory_test.cpp  hidumper_output_test.cpp  hidumper_privacy_test.cpp  hidumper_service_test.cpp  hidumper_service_test.h  hidumper_test_default_callback.cpp  hidumper_test_default_callback.h  hidumper_test_utils.cpp  hidumper_test_utils.h  hidumper_zidl_test.cpp  memory_dumper_test.cpp  sa_dumper_test.cpp  storage_info_task_test.cpp  zip_file_cleaner_test.cpp
(+171 files in other folders)
