# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

hidumper_subsystem_name = "hiviewdfx"

hidumper_part_name = "hidumper"

hidumper_root_path = "//base/hiviewdfx/hidumper"

hidumper_frameworks_path = "${hidumper_root_path}/frameworks/native"

hidumper_client_path = "${hidumper_root_path}/client"

hidumper_service_path = "${hidumper_root_path}/services"

hidumper_test_path = "${hidumper_root_path}/test"

hidumper_unittest_path = "${hidumper_test_path}/unittest/common"

hidumper_utils_path = "${hidumper_root_path}/utils"

hidumper_interface = "${hidumper_root_path}/interfaces/native"

system_type = "default"
