# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("..//hidumper.gni")

config("dumper_plugin_config") {
  visibility = [ "*:*" ]

  include_dirs = [ "./" ]
}

ohos_shared_library("hidumper_plugin") {
  branch_protector_ret = "pac_ret"
  public_configs = [ ":dumper_plugin_config" ]
  sources = [
    "dumper_plugin_host.cpp"
  ]

  configs = [
    "${hidumper_utils_path}:utils_config",
  ]

  deps = [
    "${hidumper_utils_path}:utils"
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  defines = []
  if (hidumper_hiviewdfx_plugin_enable) {
    defines += [ "HIDUMPER_HIVIEWDFX_PLUGIN_ENABLE" ]
  }
  subsystem_name = "${hidumper_subsystem_name}"
  part_name = "${hidumper_part_name}"
}
