# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hidumper/hidumper.gni")

config("interface_include") {
  include_dirs = [
    "${hidumper_interface}/innerkits/include",
    "${hidumper_interface}/native/innerkits/include/",
  ]
}

config("service_config") {
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "native/include",
  ]
}

config("zidl_config") {
  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "zidl/include",
  ]
}

ohos_source_set("zidl_client") {
  sources = [ "zidl/src/dump_broker_proxy.cpp" ]

  configs = [
    "${hidumper_utils_path}:utils_config",
    ":interface_include",
    "${hidumper_service_path}:zidl_config",
  ]

  deps = [ "${hidumper_utils_path}:utils" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",

    #"samgr_L2:samgr_proxy",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "${hidumper_subsystem_name}"

  part_name = "${hidumper_part_name}"
}

ohos_source_set("zidl_service") {
  sources = [ "zidl/src/dump_broker_stub.cpp" ]

  configs = [
    "${hidumper_utils_path}:utils_config",
    ":interface_include",
    "${hidumper_service_path}:zidl_config",
  ]

  deps = [ "${hidumper_utils_path}:utils" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",

    #"samgr_L2:samgr_proxy",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "${hidumper_subsystem_name}"

  part_name = "${hidumper_part_name}"
}

ohos_source_set("hidumper_client") {
  sources = [
    "native/src/dump_manager_client.cpp",
    "native/src/dump_on_demand_load.cpp",
  ]

  configs = [
    "${hidumper_utils_path}:utils_config",
    ":interface_include",
    "${hidumper_frameworks_path}:hidumper_include",
    "${hidumper_service_path}:service_config",
    "${hidumper_service_path}:zidl_config",
  ]

  deps = [
    "${hidumper_service_path}:zidl_client",
    "${hidumper_utils_path}:utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "${hidumper_subsystem_name}"

  part_name = "${hidumper_part_name}"
}

ohos_source_set("hidumperservice_source") {
  sources = [
    "native/src/dump_common_utils.cpp",
    "native/src/dump_event_handler.cpp",
    "native/src/dump_log_manager.cpp",
    "native/src/dump_manager_service.cpp",
    "native/src/raw_param.cpp",
  ]

  configs = [
    "${hidumper_utils_path}:utils_config",
    ":interface_include",
    "${hidumper_frameworks_path}:hidumper_include",
    "${hidumper_service_path}:service_config",
    "${hidumper_service_path}:zidl_config",
  ]

  deps = [
    "${hidumper_frameworks_path}:dump_main",
    "${hidumper_service_path}:zidl_service",
    "${hidumper_utils_path}:utils",
  ]

  external_deps = [
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog_native:libhilog",
    "hisysevent_native:libhisysevent",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

ohos_shared_library("hidumperservice") {
  deps = [ ":hidumperservice_source" ]
  install_enable = true
  version_script = "hidumper.map"
  subsystem_name = "${hidumper_subsystem_name}"
  part_name = "${hidumper_part_name}"
}

############################################################################

ohos_prebuilt_etc("hidumper_service.rc") {
  source = "native/etc/hidumper_service.cfg"

  relative_install_dir = "init"

  subsystem_name = "${hidumper_subsystem_name}"

  part_name = "${hidumper_part_name}"
}

ohos_prebuilt_etc("infos_config") {
  source = "native/etc/infos_config.json"

  relative_install_dir = "hidumper"

  subsystem_name = "${hidumper_subsystem_name}"

  part_name = "${hidumper_part_name}"
}
