# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#################################group#########################################
group("unittest") {
  testonly = true
  deps = []

  deps += [ "unittest/common:unittest" ]
}

group("fuzztest") {
  testonly = true
  deps = [ "fuzztest/sadump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/client_fuzzer:fuzztest" ]
  deps += [ "fuzztest/dumpusage_fuzzer:fuzztest" ]
  deps += [ "fuzztest/helpdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/processdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/storagedump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/cpudump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/memdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/memsmapsdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/memjsheapdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/ipcdump_fuzzer:fuzztest" ]
  deps += [ "fuzztest/netdump_fuzzer:fuzztest" ]
}
###############################################################################
