# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hidumper/hidumper.gni")

config("dump_usage_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    ".",
    "${hidumper_frameworks_path}/include",
    "//utils/native/base/include",
    "//base/hiviewdfx/hidumper/utils/native/include/",
    "//base/hiviewdfx/hidumper/frameworks/native",
    "//base/hiviewdfx/hidumper/services/native/include",
    "//base/hiviewdfx/hidumper/interfaces/native/innerkits/include",
  ]
}

ohos_shared_library("lib_dump_usage") {
  public_configs = [ ":dump_usage_config" ]

  deps = [ "//base/hiviewdfx/hidumper/services:hidumperservice" ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  sources = [ "//base/hiviewdfx/hidumper/interfaces/innerkits/dump_usage.cpp" ]
  subsystem_name = "hiviewdfx"
  part_name = "hidumper"
}
